--- a/PeopleViewApp/Styles/CommonStyles.xaml
+++ b/PeopleViewApp/Styles/CommonStyles.xaml
@@ -59,6 +59,8 @@
     <Style x:Key="BaseButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="FontSize" Value="{StaticResource NormalFontSize}" />
         <Setter Property="Height" Value="32" />
+        <Setter Property="Width" Value="75" />
+        <Setter Property="Margin" Value="5" />
         <Setter Property="VerticalAlignment" Value="Bottom" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Template">
