--- a/PeopleViewApp/MainWindow.xaml
+++ b/PeopleViewApp/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:views="clr-namespace:PeopleViewApp.Views"
         Title="People"
         mc:Ignorable="d"
-        Height="720" Width="1080" >
+        ResizeMode="NoResize" Height="690" Width="820" >
     <ContentControl Content="{Binding CurrentViewModel}">
         <ContentControl.Resources>
             <DataTemplate DataType="{x:Type viewmodels:HomeViewModel}">
